# domain-entity-service-template

./: .gitignore  README.md
python/fastapi/entity-service/: .isort.cfg  README.md  pyproject.toml
python/fastapi/entity-service/api/: main.py
python/fastapi/entity-service/api/application/entity_aggregate/: entity_handler.py
python/fastapi/entity-service/api/application/health/: health_handler.py
python/fastapi/entity-service/api/domain/entity_aggregate/: entity.py  entity_errors.py  entity_repo.py  entity_service.py
python/fastapi/entity-service/api/infrastructure/entity_aggregate/: entity_repo.py
